--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
   "deno.enable": true,
   "editor.defaultFormatter": "denoland.vscode-deno",
-  "editor.formatOnSave": true
+  "editor.formatOnSave": true,
+  "deno.suggest.imports.hosts": {
+    "https://esm.sh": false,
+    "https://deno.land": true,
+    "https://cdn.skypack.dev": false
+  }
 }
